{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 7,
  "lineage": "15a83d1a-334b-a885-8389-4bcf702d3867",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284830762978:internet-gateway/igw-0195c77fb0c5c6d95",
            "id": "igw-0195c77fb0c5c6d95",
            "owner_id": "284830762978",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0eeaff936a3b3963d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "284830762978",
            "id": "igw-0195c77fb0c5c6d95",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284830762978:route-table/rtb-05a4502dde957ffa3",
            "id": "rtb-05a4502dde957ffa3",
            "owner_id": "284830762978",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0195c77fb0c5c6d95",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-main"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-main"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eeaff936a3b3963d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "284830762978",
            "id": "rtb-05a4502dde957ffa3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a7d4e8ae23eb0b1",
            "region": "us-east-1",
            "route_table_id": "rtb-05a4502dde957ffa3",
            "subnet_id": "subnet-040e6be9f6edbc8d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "284830762978",
            "id": "rtbassoc-09a7d4e8ae23eb0b1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284830762978:security-group/sg-0ced7bcfb0c80c5c0",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ced7bcfb0c80c5c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "284830762978",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eeaff936a3b3963d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "284830762978",
            "id": "sg-0ced7bcfb0c80c5c0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284830762978:subnet/subnet-040e6be9f6edbc8d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040e6be9f6edbc8d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284830762978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Terraform_Public_Subnet1-main"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet1-main"
            },
            "vpc_id": "vpc-0eeaff936a3b3963d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "284830762978",
            "id": "subnet-040e6be9f6edbc8d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284830762978:vpc/vpc-0eeaff936a3b3963d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c1cfafecd57e6c67",
            "default_route_table_id": "rtb-089b15b9e8c062a0e",
            "default_security_group_id": "sg-04bd8ca9a7cd615f7",
            "dhcp_options_id": "dopt-0ae734b8fc6bea845",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eeaff936a3b3963d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089b15b9e8c062a0e",
            "owner_id": "284830762978",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-aws-main",
              "Owner": "Neelufur"
            },
            "tags_all": {
              "Name": "terraform-aws-main",
              "Owner": "Neelufur"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "284830762978",
            "id": "vpc-0eeaff936a3b3963d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}